fixed menu scrolling and menu not working on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
     width: 100vw;
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
   
   body::-webkit-scrollbar {
@@ -24,6 +25,7 @@
     grid-template-rows: 3;
     gap: 3px;
     position: relative;
+    pointer-events: none;
   }
   
   .dot {
@@ -36,6 +38,7 @@
     transition: border-radius 0.5s ease;
     transition: margin-left 0.3s ease;
     box-shadow: 0px 0px 3px rgba(0,0,0,0.7);
+    pointer-events: none;
   }
   
   .extended {
